--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,12 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "outDir": "./build",
+    "outDir": "./bin",
     "target": "es2021",
     "lib": ["es2022"],
     "jsx": "react-jsx",
     "module": "es2022",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node",
     "types": [
       "node"
     ],
@@ -20,7 +20,9 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "rootDir": "."
   },
-  "include": [ "test/**/*.ts", "scripts/**/*.ts", "src/**/*.ts"]
+  "include": [ "src/**/*.ts", "scripts/**/*.ts" ],
+  "exclude": ["node_modules", "build", "dist", "test"]
 }
