--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "crypto",
     "modelcontextprotocol"
   ],
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "type": "module",
   "scripts": {
     "build": "tsc --build",
-    "dev": "tsx watch scripts/start-server.ts"
+    "dev": "tsx watch scripts/start-server.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "npm run build"
   },
   "bin": {
     "@nic0xflamel/coingecko-mcp-server": "./bin/scripts/start-server.js"
@@ -54,7 +56,7 @@
     "vitest": "^3.1.1"
   },
   "description": "MCP server for the CoinGecko API (Public)",
-  "main": "./build/scripts/start-server.js",
+  "main": "./bin/scripts/start-server.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nic0xflamel/coingecko-mcp-server.git"
