fix: include build/ dir in package files

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "crypto",
     "modelcontextprotocol"
   ],
-  "version": "0.1.10",
+  "version": "0.1.11",
   "license": "MIT",
   "type": "module",
   "exports": {
@@ -27,6 +27,7 @@
     "coingecko-mcp-server": "./bin/cli.js"
   },
   "files": [
+    "build/",
     "bin",
     "specs/",
     "README.md",
