--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "crypto",
     "modelcontextprotocol"
   ],
-  "version": "0.1.14",
+  "version": "0.1.15",
   "license": "MIT",
   "type": "module",
   "exports": {
@@ -19,7 +19,6 @@
     "build": "tsc --build && chmod +x bin/cli.cjs",
     "dev": "tsx watch scripts/start-server.ts",
     "test": "jest",
-    "prepare": "npm run build",
     "start": "node ./bin/scripts/start-server.js",
     "watch": "tsc --build --watch"
   },
@@ -58,7 +57,7 @@
     "multer": "1.4.5-lts.1",
     "openai": "^4.91.1",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
+    "typescript": "^5.4.5",
     "vitest": "^3.1.1"
   },
   "description": "MCP server for the CoinGecko API (Public)",
@@ -70,5 +69,8 @@
   "bugs": {
     "url": "https://github.com/nic0xflamel/coingecko-mcp-server/issues"
   },
-  "homepage": "https://github.com/nic0xflamel/coingecko-mcp-server#readme"
+  "homepage": "https://github.com/nic0xflamel/coingecko-mcp-server#readme",
+  "volta": {
+    "node": "20.11.0"
+  }
 }
